Addressed minor code quality issues reported by SonarQube